--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,3 +11,31 @@ hero:
       link: /global/log/
       icon: right-arrow
 ---
+
+import { ShowcaseImage } from 'starlight-showcases'
+
+### Made Possible Thanks To:
+<ShowcaseImage
+  entries={[
+    {
+      thumbnail: import('../../assets/icons/iona.png'),
+      href: 'https://iona.quest',
+      title: 'iona',
+    },
+    {
+      thumbnail: import('../../assets/icons/gu5.png'),
+      href: 'https://gu5.org',
+      title: 'Gus',
+    },
+    {
+      thumbnail: import('../../assets/icons/swatdoge.png'),
+      href: 'https://swatdoge.eu',
+      title: 'Swatdoge',
+    },
+    {
+      thumbnail: import('../../assets/icons/astro.svg'),
+      href: 'https://https://astro.build',
+      title: 'The Astro Team',
+    },
+  ]}
+/>
