Fix: Astro Link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -34,7 +34,7 @@ import { ShowcaseImage } from 'starlight-showcases'
     },
     {
       thumbnail: import('../../assets/icons/astro.svg'),
-      href: 'https://https://astro.build',
+      href: 'https://astro.build',
       title: 'The Astro Team',
     },
   ]}
