Change: Swapped all .md files to .mdx

--- a/src/content/docs/variables/shared.mdx
+++ b/src/content/docs/variables/shared.mdx
@@ -5,7 +5,7 @@ description: Shared Type functionality available in KS
 
 All Types in KS share basic functionality.
 
-<!-- this would fit better in a section dedicated to variable declarations, and other syntax stuff -->
+{/* this would fit better in a section dedicated to variable declarations, and other syntax stuff */}
 ## Naming Rules
 
 ```krnk
